<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorFondo"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.concurso.myapplication.RepasoMultiplicacion_Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnResolver"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblOperacion"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtResult"
        android:text="@string/txtResultado"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnAnterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBotones"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp"
            android:text="@string/btnAnterior"
            />

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBotones"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="50sp"
            android:text="@string/btnSiguiente"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnMenuPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnMenuPrincipal"
        android:background="@color/colorBotones"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/img_regreso"
        android:layout_gravity="right"
        android:padding="10dp"
        android:onClick="regresoMenuPrincipal"
        />

</LinearLayout>
